--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         <div class="col">Header</div>
       </header>
       <div class="row">
-        <div class="col-6 bg-secondary myContent">Left</div>
+        <div class="col-6 bg-secondary myContent">
+          <div class="container bg-light myclass p-5 mt-5">
+            <h1 class="mt-2">Custom Jumbotron</h1>
+            <p>Using a series of utilities, you can create this Jumbotron</p>
+            <button class="btn btn-primary btn-lg">Example Button</button>    
+          </div>
+        </div>
         <div class="col-6 bg-info myContent">Right</div>
       </div>
       <footer class= "row bg-danger">
